--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
     <meta charset="utf-8">
+    <title>Bolt - Free Bootstrap 3 Theme</title>
+    <meta name="description" content="This is my portfolio site.">
+    <meta name="keywords" content="bolt, bootstrap, portfolio">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/reset.css">
@@ -10,6 +14,118 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+      <div class="wrapper">
+        <header class="header">
+          <div class="inner header-inner">
+            <i class="fas fa-bolt fa-3x fa-gray"></i>
+            <a href="" class="header-bottom">Contact</a>
+          </div>
+        </header>
+        <main>
+          <div id="title">
+            <div class="inner title-inner">
+              <div class="mainTitle">
+                <h1>Bolt Theme</h1>
+                <h2>FREE BOOTSRAP THEMS</h2>
+              </div>
+            </div>
+          </div>
 
+          <div id="Green">
+            <div class="inner green-inner">
+              <div class="clearfix">
+                <div class="iphoneImg">
+                  <img src="img/iphone.png" alt="">
+                </div>
+
+                <div class="greenTitle">
+                  <h3>WHAT WE CAN DO?</h3>
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="portfolio">
+            <div class="inner">
+              <div class="portfolioTitle mt grid">
+                <h3>OUR LATEST WORK</h3>
+                <div class="mt"></div>
+                  <div class="portfolioImg">
+                    <div class="work">
+                      <a href="#"><img src="img/01.jpg" alt=""></a>
+                      <a href="#"><img src="img/02.jpg" alt=""></a>
+                      <a href="#"><img src="img/03.jpg" alt=""></a>
+                      <a href="#"><img src="img/04.jpg" alt=""></a>
+                      <a href="#"><img src="img/05.jpg" alt=""></a>
+                      <a href="#"><img src="img/06.jpg" alt=""></a>
+                    </div>
+                  </div>
+              </div>
+            
+              <div class="description">
+                <div class="dummyText">
+                  <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+                </div>
+                <div class="contact">
+                  <p><button type="button" class="btn btn-theme btn-lg">Email Me!</button></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="skills">
+            <div class="inner">
+              <div class="skillTitle">
+                <h3>OUR SKILLS</h3>
+              </div>
+              <div class="mainSkill">
+                <div class="skillPra">
+                  <img src="img/circle_01.png" id="javascript" alt="">
+                  <p>Javascript</p>
+                </div>
+                <div class="skillPra">
+                  <img src="img/circle_02.png" id="bootstrap" alt="">
+                  <p>Bootstrap</p>
+                </div>
+                <div class="skillPra">
+                  <img src="img/circle_03.png" id="wordpress" alt="">
+                  <p>Wordpress</p>
+                </div>
+                <div class="skillPra">
+                  <img src="img/circle_04.png" id="photoshop" alt="">
+                  <p>Photoshop</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="sns">
+            <div class="inner">
+              <div class="sns-contents">
+                  <div class="sns-icon">
+                    <i class="fab fa-facebook-f"></i>
+                  </div>
+                  <div class="sns-icon">
+                    <i class="fas fa-basketball-ball"></i>
+                  </div>
+                  <div class="sns-icon">
+                    <i class="fab fa-twitter"></i>
+                  </div>
+                  <div class="sns-icon">
+                    <i class="fas fa-envelope"></i>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </main>
+        <footer class="footer">
+          <div class="inner">
+            <div class="footer-text">
+              <p>Crafted with <i class="fas fa-heart"></i> by BlackTie.co.</p>
+            </div>
+          </div>
+        </footer>
+      </div>
   </body>
 </html>
