--- a/index.html
+++ b/index.html
@@ -25,40 +25,38 @@
           <div id="title">
             <div class="inner title-inner">
               <div class="mainTitle">
-                <h1>Bolt Theme</h1>
-                <h2>FREE BOOTSRAP THEMS</h2>
+                <h1 class="font">Bolt Theme</h1>
+                <p>FREE BOOTSRAP THEMS</p>
               </div>
             </div>
           </div>
 
-          <div id="Green">
+          <section id="Green">
             <div class="inner green-inner">
-              <div class="clearfix">
                 <div class="iphoneImg">
                   <img src="img/iphone.png" alt="">
                 </div>
                 <div class="greenTitle">
-                  <h3>WHAT WE CAN DO?</h3>
+                  <h2 class="font">WHAT WE CAN DO?</h2>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </div>
-              </div>
             </div>
-          </div>
+          </section>
 
-          <div id="portfolio">
+          <article id="portfolio">
             <div class="inner">
               <div class="portfolioTitle mt grid">
-                <h3>OUR LATEST WORK</h3>
+                <h2 class="font">OUR LATEST WORK</h2>
                 <div class="mt"></div>
                   <div class="portfolioImg">
-                    <div class="work">
+                    <ul class="work">
                       <a href="#"><img src="img/01.jpg" alt=""></a>
                       <a href="#"><img src="img/02.jpg" alt=""></a>
                       <a href="#"><img src="img/03.jpg" alt=""></a>
                       <a href="#"><img src="img/04.jpg" alt=""></a>
                       <a href="#"><img src="img/05.jpg" alt=""></a>
                       <a href="#"><img src="img/06.jpg" alt=""></a>
-                    </div>
+                    </ul>
                   </div>
               </div>
             
@@ -71,52 +69,60 @@
                 </div>
               </div>
             </div>
-          </div>
+          </article>
 
-          <div id="skills">
-            <div class="inner">
+          <section id="skills">
+            <div class="inner skill-inner">
               <div class="skillTitle">
-                <h3>OUR SKILLS</h3>
+                <h2 class="font">OUR SKILLS</h2>
               </div>
-              <div class="mainSkill">
-                <div class="skillPra">
+              <ul class="mainSkill">
+                <li class="skillPra">
+                  <figure>
                   <img src="img/circle_01.png" id="javascript" alt="">
-                  <p>Javascript</p>
-                </div>
-                <div class="skillPra">
+                  <figcaption>Javascript</figcaption>
+                  </figure>
+                </li>
+                <li class="skillPra">
+                  <figure>
                   <img src="img/circle_02.png" id="bootstrap" alt="">
-                  <p>Bootstrap</p>
-                </div>
-                <div class="skillPra">
+                  <figcaption>Bootstrap</figcaption>
+                  </figure>
+                </li>
+                <li class="skillPra">
+                  <figure>
                   <img src="img/circle_03.png" id="wordpress" alt="">
-                  <p>Wordpress</p>
-                </div>
-                <div class="skillPra">
+                  <figcaption>Wordpress</figcaption>
+                  </figure>
+                </li>
+                <li class="skillPra">
+                  <figure>
                   <img src="img/circle_04.png" id="photoshop" alt="">
-                  <p>Photoshop</p>
-                </div>
-              </div>
+                  <figcaption>Photoshop</figcaption>
+                  </figure>
+                </li>
+              </ul>
             </div>
-          </div>
+          </section>
 
-          <div id="sns">
+          <nav id="sns">
             <div class="inner">
-              <div class="sns-contents">
-                  <div class="sns-icon">
-                    <i class="fab fa-facebook-f"></i>
-                  </div>
-                  <div class="sns-icon">
-                    <i class="fas fa-basketball-ball"></i>
-                  </div>
-                  <div class="sns-icon">
-                    <i class="fab fa-twitter"></i>
-                  </div>
-                  <div class="sns-icon">
-                    <i class="fas fa-envelope"></i>
-                  </div>
-              </div>
+              <ul class="sns-contents">
+                  <li class="sns-icon">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  </li>
+                  <li class="sns-icon">
+                    <a href="#"><i class="fab fa-dribbble"></i></a>
+                  </li>
+                  <li class="sns-icon">
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                  </li>
+                  <li class="sns-icon">
+                    <a href="#"><i class="fas fa-envelope"></i></a>
+                  </li>
+              </ul>
             </div>
-          </div>
+          </nav>
         </main>
         <footer class="footer">
           <div class="inner">
