bolt pc版 html修正点

--- a/index.html
+++ b/index.html
@@ -21,114 +21,104 @@
             <a href="" class="header-bottom">Contact</a>
           </div>
         </header>
+
         <main>
-          <div id="title">
+          <div class="title">
             <div class="inner title-inner">
-              <div class="mainTitle">
                 <h1 class="font">Bolt Theme</h1>
                 <p>FREE BOOTSRAP THEMS</p>
-              </div>
             </div>
           </div>
 
-          <section id="Green">
+          <section class="Green">
             <div class="inner green-inner">
-                <div class="iphoneImg">
-                  <img src="img/iphone.png" alt="">
-                </div>
-                <div class="greenTitle">
-                  <h2 class="font">WHAT WE CAN DO?</h2>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                </div>
+              <div class="iphoneImg">
+                <img src="img/iphone.png" alt="">
+              </div>
+              <div class="greenTitle">
+                <h2 class="font">WHAT WE CAN DO?</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+              </div>
             </div>
           </section>
 
-          <article id="portfolio">
+          <article class="portfolio">
             <div class="inner">
-              <div class="portfolioTitle mt grid">
                 <h2 class="font">OUR LATEST WORK</h2>
-                <div class="mt"></div>
-                  <div class="portfolioImg">
                     <ul class="work">
-                      <a href="#"><img src="img/01.jpg" alt=""></a>
-                      <a href="#"><img src="img/02.jpg" alt=""></a>
-                      <a href="#"><img src="img/03.jpg" alt=""></a>
-                      <a href="#"><img src="img/04.jpg" alt=""></a>
-                      <a href="#"><img src="img/05.jpg" alt=""></a>
-                      <a href="#"><img src="img/06.jpg" alt=""></a>
+                      <li><a href="#"><img src="img/01.jpg" alt=""></a></li>
+                      <li><a href="#"><img src="img/02.jpg" alt=""></a></li>
+                      <li><a href="#"><img src="img/03.jpg" alt=""></a></li>
+                      <li><a href="#"><img src="img/04.jpg" alt=""></a></li>
+                      <li><a href="#"><img src="img/05.jpg" alt=""></a></li>
+                      <li><a href="#"><img src="img/06.jpg" alt=""></a></li>
                     </ul>
-                  </div>
-              </div>
             
               <div class="description">
                 <div class="dummyText">
                   <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
                 </div>
                 <div class="contact">
-                  <p><button type="button" class="btn btn-theme btn-lg">Email Me!</button></p>
+                  <a href="" class="btn btn-theme">Email Me!</a>
                 </div>
               </div>
             </div>
           </article>
 
-          <section id="skills">
-            <div class="inner skill-inner">
-              <div class="skillTitle">
-                <h2 class="font">OUR SKILLS</h2>
-              </div>
-              <ul class="mainSkill">
-                <li class="skillPra">
-                  <figure>
-                  <img src="img/circle_01.png" id="javascript" alt="">
-                  <figcaption>Javascript</figcaption>
-                  </figure>
-                </li>
-                <li class="skillPra">
-                  <figure>
-                  <img src="img/circle_02.png" id="bootstrap" alt="">
-                  <figcaption>Bootstrap</figcaption>
-                  </figure>
-                </li>
-                <li class="skillPra">
-                  <figure>
-                  <img src="img/circle_03.png" id="wordpress" alt="">
-                  <figcaption>Wordpress</figcaption>
-                  </figure>
-                </li>
-                <li class="skillPra">
-                  <figure>
-                  <img src="img/circle_04.png" id="photoshop" alt="">
-                  <figcaption>Photoshop</figcaption>
-                  </figure>
-                </li>
-              </ul>
+          <section class="skills">
+            <div class="inner">
+              <h2>OUR SKILLS</h2>
+                <ul class="mainSkill">
+                  <li class="skillPra">
+                    <figure>
+                    <img src="img/circle_01.png" id="javascript" alt="">
+                    <figcaption>Javascript</figcaption>
+                    </figure>
+                  </li>
+                  <li class="skillPra">
+                    <figure>
+                    <img src="img/circle_02.png" id="bootstrap" alt="">
+                    <figcaption>Bootstrap</figcaption>
+                    </figure>
+                  </li>
+                  <li class="skillPra">
+                    <figure>
+                    <img src="img/circle_03.png" id="wordpress" alt="">
+                    <figcaption>Wordpress</figcaption>
+                    </figure>
+                  </li>
+                  <li class="skillPra">
+                    <figure>
+                    <img src="img/circle_04.png" id="photoshop" alt="">
+                    <figcaption>Photoshop</figcaption>
+                    </figure>
+                  </li>
+                </ul>
             </div>
           </section>
 
-          <nav id="sns">
+          <nav class="sns">
             <div class="inner">
               <ul class="sns-contents">
-                  <li class="sns-icon">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  </li>
-                  <li class="sns-icon">
-                    <a href="#"><i class="fab fa-dribbble"></i></a>
-                  </li>
-                  <li class="sns-icon">
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                  </li>
-                  <li class="sns-icon">
-                    <a href="#"><i class="fas fa-envelope"></i></a>
-                  </li>
+                <li class="sns-icon">
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li class="sns-icon">
+                  <a href="#"><i class="fab fa-dribbble"></i></a>
+                </li>
+                <li class="sns-icon">
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li class="sns-icon">
+                  <a href="#"><i class="fas fa-envelope"></i></a>
+                </li>
               </ul>
             </div>
           </nav>
         </main>
         <footer class="footer">
-          <div class="inner">
-            <div class="footer-text">
+          <div class="inner footer-inner">
               <p>Crafted with <i class="fas fa-heart"></i> by BlackTie.co.</p>
-            </div>
           </div>
         </footer>
       </div>
