bolt pc版 追加修正

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
           <section class="skills">
             <div class="inner">
-              <h2>OUR SKILLS</h2>
+              <h2 class="font">OUR SKILLS</h2>
                 <ul class="mainSkill">
                   <li class="skillPra">
                     <figure>
