--- a/index.html
+++ b/index.html
@@ -1,126 +1,100 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8">
-    <title>Bolt - Free Bootstrap 3 Theme</title>
-    <meta name="description" content="This is my portfolio site.">
-    <meta name="keywords" content="bolt, bootstrap, portfolio">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/lib/all.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-      <div class="wrapper">
-        <header class="header">
-          <div class="inner header-inner">
-            <i class="fas fa-bolt fa-3x fa-gray"></i>
-            <a href="" class="header-bottom">Contact</a>
-          </div>
-        </header>
-
-        <main>
-          <div class="title">
-            <div class="inner title-inner">
-                <h1 class="font">Bolt Theme</h1>
-                <p>FREE BOOTSRAP THEMS</p>
-            </div>
-          </div>
-
-          <section class="Green">
-            <div class="inner green-inner">
-              <div class="iphoneImg">
-                <img src="img/iphone.png" alt="">
-              </div>
-              <div class="greenTitle">
-                <h2 class="font">WHAT WE CAN DO?</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-              </div>
-            </div>
-          </section>
-
-          <article class="portfolio">
-            <div class="inner">
-                <h2 class="font">OUR LATEST WORK</h2>
-                    <ul class="work">
-                      <li><a href="#"><img src="img/01.jpg" alt=""></a></li>
-                      <li><a href="#"><img src="img/02.jpg" alt=""></a></li>
-                      <li><a href="#"><img src="img/03.jpg" alt=""></a></li>
-                      <li><a href="#"><img src="img/04.jpg" alt=""></a></li>
-                      <li><a href="#"><img src="img/05.jpg" alt=""></a></li>
-                      <li><a href="#"><img src="img/06.jpg" alt=""></a></li>
-                    </ul>
-            
-              <div class="description">
-                <div class="dummyText">
-                  <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
-                </div>
-                <div class="contact">
-                  <a href="" class="btn btn-theme">Email Me!</a>
-                </div>
-              </div>
-            </div>
-          </article>
-
-          <section class="skills">
-            <div class="inner">
-              <h2 class="font">OUR SKILLS</h2>
-                <ul class="mainSkill">
-                  <li class="skillPra">
-                    <figure>
-                    <img src="img/circle_01.png" id="javascript" alt="">
-                    <figcaption>Javascript</figcaption>
-                    </figure>
-                  </li>
-                  <li class="skillPra">
-                    <figure>
-                    <img src="img/circle_02.png" id="bootstrap" alt="">
-                    <figcaption>Bootstrap</figcaption>
-                    </figure>
-                  </li>
-                  <li class="skillPra">
-                    <figure>
-                    <img src="img/circle_03.png" id="wordpress" alt="">
-                    <figcaption>Wordpress</figcaption>
-                    </figure>
-                  </li>
-                  <li class="skillPra">
-                    <figure>
-                    <img src="img/circle_04.png" id="photoshop" alt="">
-                    <figcaption>Photoshop</figcaption>
-                    </figure>
-                  </li>
-                </ul>
-            </div>
-          </section>
-
-          <nav class="sns">
-            <div class="inner">
-              <ul class="sns-contents">
-                <li class="sns-icon">
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
-                </li>
-                <li class="sns-icon">
-                  <a href="#"><i class="fab fa-dribbble"></i></a>
-                </li>
-                <li class="sns-icon">
-                  <a href="#"><i class="fab fa-twitter"></i></a>
-                </li>
-                <li class="sns-icon">
-                  <a href="#"><i class="fas fa-envelope"></i></a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </main>
-        <footer class="footer">
-          <div class="inner footer-inner">
-              <p>Crafted with <i class="fas fa-heart"></i> by BlackTie.co.</p>
-          </div>
-        </footer>
+<head>
+  <meta charset="utf-8">
+  <title>Bolt - Free Bootstrap 3 Theme</title>
+  <meta name="description" content="This is my portfolio site.">
+  <meta name="keywords" content="bolt, bootstrap, portfolio">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="format-detection" content="telephone=no">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/lib/all.css">
+  <link rel="stylesheet" href="css/style.css"> </head>
+<body>
+  <div class="wrapper">
+    <header class="header">
+      <div class="inner header-inner"> <i class="fas fa-bolt fa-3x fa-gray"></i> <a href="" class="header-bottom">Contact</a> </div>
+    </header>
+    <main>
+      <div class="title">
+        <div class="inner title-inner">
+          <h1 class="font">Bolt Theme</h1>
+          <p>FREE BOOTSRAP THEMS</p>
+        </div>
       </div>
-  </body>
+      <section class="Green">
+        <div class="inner green-inner">
+          <div class="iphoneImg"> <img src="img/iphone.png" alt=""> </div>
+          <div class="greenTitle">
+            <h2 class="font">WHAT WE CAN DO?</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          </div>
+        </div>
+      </section>
+      <article class="portfolio">
+        <div class="inner">
+          <h2 class="font">OUR LATEST WORK</h2>
+          <ul class="work">
+            <li><a href="#"><img src="img/01.jpg" alt=""></a></li>
+            <li><a href="#"><img src="img/02.jpg" alt=""></a></li>
+            <li><a href="#"><img src="img/03.jpg" alt=""></a></li>
+            <li><a href="#"><img src="img/04.jpg" alt=""></a></li>
+            <li><a href="#"><img src="img/05.jpg" alt=""></a></li>
+            <li><a href="#"><img src="img/06.jpg" alt=""></a></li>
+          </ul>
+          <div class="description">
+            <div class="dummyText">
+              <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
+            </div>
+            <div class="contact"> <a href="" class="btn btn-theme">Email Me!</a> </div>
+          </div>
+        </div>
+      </article>
+      <section class="skills">
+        <div class="inner">
+          <h2 class="font">OUR SKILLS</h2>
+          <ul class="mainSkill">
+            <li class="skillPra">
+              <figure> <img src="img/circle_01.png" id="javascript" alt="">
+                <figcaption>Javascript</figcaption>
+              </figure>
+            </li>
+            <li class="skillPra">
+              <figure> <img src="img/circle_02.png" id="bootstrap" alt="">
+                <figcaption>Bootstrap</figcaption>
+              </figure>
+            </li>
+            <li class="skillPra">
+              <figure> <img src="img/circle_03.png" id="wordpress" alt="">
+                <figcaption>Wordpress</figcaption>
+              </figure>
+            </li>
+            <li class="skillPra">
+              <figure> <img src="img/circle_04.png" id="photoshop" alt="">
+                <figcaption>Photoshop</figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <nav class="sns">
+        <div class="inner">
+          <ul class="sns-contents">
+            <li class="sns-icon"> <a href="#"><i class="fab fa-facebook-f"></i></a> </li>
+            <li class="sns-icon"> <a href="#"><i class="fab fa-dribbble"></i></a> </li>
+            <li class="sns-icon"> <a href="#"><i class="fab fa-twitter"></i></a> </li>
+            <li class="sns-icon"> <a href="#"><i class="fas fa-envelope"></i></a> </li>
+          </ul>
+        </div>
+      </nav>
+    </main>
+    <footer class="footer">
+      <div class="inner footer-inner">
+        <p>Crafted with <i class="fas fa-heart"></i> by BlackTie.co.</p>
+      </div>
+    </footer>
+  </div>
+</body>
 </html>
