--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 <body>
   <div class="wrapper">
     <header class="header">
-      <div class="inner header-inner"> <i class="fas fa-bolt fa-3x fa-gray"></i> <a href="" class="header-bottom">Contact</a> </div>
+      <div class="inner header-inner">
+        <i class="fas fa-bolt fa-3x fa-gray"></i>
+        <a href="" class="header-bottom">Contact</a>
+      </div>
     </header>
     <main>
       <div class="title">
@@ -26,7 +29,9 @@
       </div>
       <section class="Green">
         <div class="inner green-inner">
-          <div class="iphoneImg"> <img src="img/iphone.png" alt=""> </div>
+          <div class="iphoneImg">
+            <img src="img/iphone.png" alt="">
+          </div>
           <div class="greenTitle">
             <h2 class="font">WHAT WE CAN DO?</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -37,18 +42,44 @@
         <div class="inner">
           <h2 class="font">OUR LATEST WORK</h2>
           <ul class="work">
-            <li><a href="#"><img src="img/01.jpg" alt=""></a></li>
-            <li><a href="#"><img src="img/02.jpg" alt=""></a></li>
-            <li><a href="#"><img src="img/03.jpg" alt=""></a></li>
-            <li><a href="#"><img src="img/04.jpg" alt=""></a></li>
-            <li><a href="#"><img src="img/05.jpg" alt=""></a></li>
-            <li><a href="#"><img src="img/06.jpg" alt=""></a></li>
+            <li>
+              <a href="#">
+                <img src="img/01.jpg" alt="">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="img/02.jpg" alt="">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="img/03.jpg" alt="">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="img/04.jpg" alt="">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="img/05.jpg" alt="">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="img/06.jpg" alt="">
+              </a>
+            </li>
           </ul>
           <div class="description">
             <div class="dummyText">
               <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.</p>
             </div>
-            <div class="contact"> <a href="" class="btn btn-theme">Email Me!</a> </div>
+            <div class="contact">
+              <a href="" class="btn btn-theme">Email Me!</a>
+            </div>
           </div>
         </div>
       </article>
@@ -82,17 +113,35 @@
       <nav class="sns">
         <div class="inner">
           <ul class="sns-contents">
-            <li class="sns-icon"> <a href="#"><i class="fab fa-facebook-f"></i></a> </li>
-            <li class="sns-icon"> <a href="#"><i class="fab fa-dribbble"></i></a> </li>
-            <li class="sns-icon"> <a href="#"><i class="fab fa-twitter"></i></a> </li>
-            <li class="sns-icon"> <a href="#"><i class="fas fa-envelope"></i></a> </li>
+            <li class="sns-icon">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li class="sns-icon">
+              <a href="#">
+                <i class="fab fa-dribbble"></i>
+              </a>
+            </li>
+            <li class="sns-icon">
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li class="sns-icon">
+              <a href="#"><i class="fas fa-envelope"></i>
+              </a>
+            </li>
           </ul>
         </div>
       </nav>
     </main>
     <footer class="footer">
       <div class="inner footer-inner">
-        <p>Crafted with <i class="fas fa-heart"></i> by BlackTie.co.</p>
+        <p>Crafted with 
+          <i class="fas fa-heart"></i>
+          by BlackTie.co.
+        </p>
       </div>
     </footer>
   </div>
