--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
       <div class="title">
-        <div class="inner title-inner">
+        <div class="inner">
           <h1 class="font">Bolt Theme</h1>
           <p>FREE BOOTSRAP THEMS</p>
         </div>
@@ -138,7 +138,7 @@
     </main>
     <footer class="footer">
       <div class="inner footer-inner">
-        <p>Crafted with 
+        <p>Crafted with
           <i class="fas fa-heart"></i>
           by BlackTie.co.
         </p>
